[project]
name = "autogen-content-generation-cautious-fortnight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "autogen-agentchat==0.6.2",
    "autogen-core==0.6.2",
    "autogen-ext==0.6.2",
    "streamlit>=1.51.0",
]
